--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,9 @@
 @import "primeng/resources/themes/arya-orange/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeflex/primeflex.css";
+@import "primeicons/primeicons.css";
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
