--- a/src/app/pages/shared/components/feed/feed.component.html
+++ b/src/app/pages/shared/components/feed/feed.component.html
@@ -8,10 +8,11 @@
   </div>
   <div class="ml-5 surface-card shadow-2 border-round p-3 flex-auto">
     <div class="mb-3">
-      <span class="text-900 font-medium inline-block mr-3">Jacob Jones</span
-      ><span class="text-500 text-sm">1 minute ago</span>
+      <span class="text-900 font-medium inline-block mr-3">{{
+        title()
+      }}</span>
     </div>
-    <div class="line-height-3 text-700 mb-3">
+    <div class="line-height-3 text-700 mb-2">
       <ng-content></ng-content>
     </div>
   </div>
