--- a/src/app/pages/shared/components/character/character.component.html
+++ b/src/app/pages/shared/components/character/character.component.html
@@ -1,1 +1,4 @@
-<p>character works!</p>
+<p-card header="Simple Card">
+  <nu-photo [content]="content().images"></nu-photo>
+  <nu-details [content]="content()"></nu-details>
+</p-card>
