--- a/src/app/pages/shared/components/character/components/details/secton/tools/tools.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/tools/tools.component.html
@@ -1,3 +1,5 @@
-<nu-feed>
-  {{ content() }}
+@if (content()) {
+<nu-feed title="Tools">
+  <nu-list-items [content]="content()"></nu-list-items>
 </nu-feed>
+}
