--- a/src/app/pages/shared/components/feed/feed.component.html
+++ b/src/app/pages/shared/components/feed/feed.component.html
@@ -1,16 +1,19 @@
 <div class="mb-5 flex">
   <div class="flex flex-column align-items-center" style="width: 2rem">
     <span
-      class="bg-blue-500 text-0 flex align-items-center justify-content-center border-circle p-2"
-      ><i class="pi pi-compass"></i
+      class="bg-{{
+        color()
+      }} text-0 flex align-items-center justify-content-center border-circle p-2"
+      ><i class="pi pi-{{ icon() }}"></i
     ></span>
-    <div class="h-full bg-blue-500" style="width: 2px; min-height: 4rem"></div>
+    <div
+      class="h-full bg-{{ color() }}"
+      style="width: 2px; min-height: 4rem"
+    ></div>
   </div>
   <div class="ml-5 surface-card shadow-2 border-round p-3 flex-auto">
     <div class="mb-3">
-      <span class="text-900 font-medium inline-block mr-3">{{
-        title()
-      }}</span>
+      <span class="text-900 font-medium inline-block mr-3">{{ title() }}</span>
     </div>
     <div class="line-height-3 text-700 mb-2">
       <ng-content></ng-content>
