--- a/src/app/pages/shared/components/nav/nav.component.html
+++ b/src/app/pages/shared/components/nav/nav.component.html
@@ -18,6 +18,7 @@
               @for (item of content(); track $index) {
               <li>
                 <a
+                  [routerLink]="item.link"
                   class="p-ripple p-element flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
                   ><i class="pi pi-{{ item.icon }} mr-2"></i
                   ><span class="font-medium">{{ item.label }}</span
@@ -39,7 +40,6 @@
       <div class="flex">
         <a
           (click)="toggleHidden()"
-          pripple=""
           pstyleclass="#app-sidebar-1"
           enterclass="hidden"
           enteractiveclass="fadeinleft"
