--- a/src/app/pages/shared/components/nav/nav.component.html
+++ b/src/app/pages/shared/components/nav/nav.component.html
@@ -19,6 +19,7 @@
               <li>
                 <a
                   [routerLinkActive]="'active'"
+                  [routerLinkActiveOptions]="{ exact: true }"
                   [routerLink]="item.link"
                   class="p-ripple p-element flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
                   ><i class="pi pi-{{ item.icon }} mr-2"></i
