--- a/src/app/pages/collections/components/characters/characters.component.html
+++ b/src/app/pages/collections/components/characters/characters.component.html
@@ -1,2 +1,45 @@
-<p>characters works!</p>
-<nu-character [content]="CharContent.characters[0]"></nu-character>
+@if (content$ | async; as content) {
+<div class="lg:px-8 md:px-6 px-4 py-8 surface-ground ng-star-inserted">
+  <div class="surface-ground">
+    <div class="grid">
+      @for (item of content?.characters; track item.id) {
+      <div class="col-12 md:col-6 xl:col-4 p-3">
+        <div class="surface-card shadow-2 border-round p-4">
+          <div class="flex border-bottom-1 surface-border pb-4">
+            <img
+              src="{{ item.images[1] ? item.images[1] : item.images[0] }}"
+              class="mr-3"
+              style="width: 80px; height: 80px"
+            />
+            <div class="flex flex-column align-items-start">
+              <span class="text-xl text-900 font-medium mb-1">{{
+                item.name
+              }}</span
+              ><span class="text-600 font-medium mb-2">{{
+                item.personal.sex
+              }}</span
+              ><span
+                class="text-gray-50 {{
+                  getStatusClass(item.personal.status)
+                }} border-round inline-flex py-1 px-2 text-sm"
+                >{{ getStatus(item.personal.status) }}</span
+              >
+            </div>
+          </div>
+          <div class="flex justify-content-between pt-4">
+            <button
+              label="View"
+              icon="pi pi-search"
+              class="p-element p-ripple p-button-outlined p-button-secondary w-12 mr-2 p-button p-component"
+            >
+              <span class="p-button-label">Know More</span
+              ><span class="p-ink"></span>
+            </button>
+          </div>
+        </div>
+      </div>
+      }
+    </div>
+  </div>
+</div>
+}
