--- a/src/app/pages/shared/components/character/character.component.html
+++ b/src/app/pages/shared/components/character/character.component.html
@@ -1,2 +1,4 @@
-<nu-photo [content]="content().images"></nu-photo>
-<nu-details [content]="content()"></nu-details>
+@if (content$ | async; as content) {
+<nu-photo [content]="content.images"></nu-photo>
+<nu-details [content]="content"></nu-details>
+}
