--- a/src/app/pages/collections/components/characters/characters.component.html
+++ b/src/app/pages/collections/components/characters/characters.component.html
@@ -28,6 +28,7 @@
           </div>
           <div class="flex justify-content-between pt-4">
             <button
+              (click)="navigateById(item.id)"
               label="View"
               icon="pi pi-search"
               class="p-element p-ripple p-button-outlined p-button-secondary w-12 mr-2 p-button p-component"
