complete akatsuki list

--- a/src/app/pages/collections/components/akatsuki/akatsuki.component.html
+++ b/src/app/pages/collections/components/akatsuki/akatsuki.component.html
@@ -1,1 +1,3 @@
-<p>akatsuki works!</p>
+@if (content$ | async; as content) {
+<nu-character-grid [content]="content.akatsuki"></nu-character-grid>
+}
