add group grid comp to clans

--- a/src/app/pages/collections/components/clans/clans.component.html
+++ b/src/app/pages/collections/components/clans/clans.component.html
@@ -1,1 +1,6 @@
-<p>clans works!</p>
+@if (content$ | async; as content) {
+<nu-group-grid
+  [content]="content.clans"
+  [groupType]="groupType"
+></nu-group-grid>
+}
