add tailed-beasts content

--- a/src/app/pages/collections/components/tailed-beasts/tailed-beasts.component.html
+++ b/src/app/pages/collections/components/tailed-beasts/tailed-beasts.component.html
@@ -1,1 +1,3 @@
-<p>tailed-beasts works!</p>
+@if (content$ | async; as content) {
+<nu-character-grid [content]="content['tailed-beasts']"></nu-character-grid>
+}
