add teams content

--- a/src/app/pages/collections/components/teams/teams.component.html
+++ b/src/app/pages/collections/components/teams/teams.component.html
@@ -1,1 +1,7 @@
-<p>teams works!</p>
+@if (content$ | async; as content) {
+  <nu-group-grid
+    [content]="content.teams"
+    [groupType]="groupType"
+  ></nu-group-grid>
+  }
+  
