--- a/src/app/pages/shared/components/nav/nav.component.html
+++ b/src/app/pages/shared/components/nav/nav.component.html
@@ -16,13 +16,13 @@
           <li>
             <ul class="list-none p-0 m-0 overflow-hidden">
               @for (item of content(); track $index) {
-              <li>
+              <li class="nav-item">
                 <a
                   [routerLinkActive]="'active'"
                   [routerLink]="item.link"
-                  class="p-ripple p-element flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors"
+                  class="p-ripple p-element flex align-items-center cursor-pointer p-3 border-round text-700 transition-duration-150 transition-colors"
                   ><i class="pi pi-{{ item.icon }} mr-2"></i
-                  ><span class="font-medium">{{ item.label }}</span
+                  ><span class="font-medium nav-label">{{ item.label }}</span
                   ><span class="p-ink"></span
                 ></a>
               </li>
