--- a/src/app/pages/shared/components/nav/nav.component.scss
+++ b/src/app/pages/shared/components/nav/nav.component.scss
@@ -9,15 +9,33 @@
   }
 }
 
+.nav-item :hover {
+  .nav-label,
+  .pi {
+    color: var(--primary-color);
+  }
+
+  .active {
+    .nav-label,
+    .pi {
+      color: var(--surface-0) !important;
+    }
+  }
+}
+
 li {
   a {
     text-decoration: none;
+    color: var(--surface-0);
   }
 }
 
 .active {
   background-color: var(--primary-color);
-  color: var(--surface-0);
+  .nav-label,
+  .pi {
+    color: var(--surface-0);
+  }
 }
 
 .logo {
