--- a/src/app/pages/shared/components/group/group.component.html
+++ b/src/app/pages/shared/components/group/group.component.html
@@ -1,2 +1,14 @@
-<p>group works!</p>
-{{ content$ | async | json }}
+@if (content$ | async; as content) {
+<div class="lg:px-8 md:px-6 px-4 py-8 surface-ground ng-star-inserted">
+  <div class="surface-ground">
+    <div class="grid">
+      @for (item of content.characters; track item) {
+      <nu-group-character-card
+        class="col-12 md:col-6 xl:col-4 p-3"
+        [characterID]="item"
+      ></nu-group-character-card>
+      }
+    </div>
+  </div>
+</div>
+}
