pagination for characters

--- a/src/app/pages/shared/components/character-grid/character-grid.component.html
+++ b/src/app/pages/shared/components/character-grid/character-grid.component.html
@@ -44,3 +44,9 @@
   </div>
 </div>
 }
+
+<nu-paginator
+  [totalItems]="totalItems()!"
+  [(currentPage)]="currentPage"
+  [(pageSize)]="pageSize"
+></nu-paginator>
