--- a/src/app/pages/collections/components/akatsuki/akatsuki.component.html
+++ b/src/app/pages/collections/components/akatsuki/akatsuki.component.html
@@ -1,3 +1,8 @@
-@if (content$ | async; as content) {
-<nu-character-grid [content]="content.akatsuki"></nu-character-grid>
+@if (content$() | async; as content) {
+<nu-character-grid
+  [content]="content.akatsuki"
+  [totalItems]="content.total"
+  [(currentPage)]="currentPage"
+  [(pageSize)]="pageSize"
+></nu-character-grid>
 }
