--- a/src/app/pages/shared/components/paginator/paginator.component.html
+++ b/src/app/pages/shared/components/paginator/paginator.component.html
@@ -2,8 +2,8 @@
   <p-paginator
     [classList]="'shadow-2'"
     (onPageChange)="onPageChange($event)"
-    [first]="first"
-    [rows]="rows"
+    [first]="first()"
+    [rows]="rows()"
     [totalRecords]="totalItems()"
     [rowsPerPageOptions]="[25, 50, 100]"
   />
