--- a/src/app/pages/shared/components/character-grid/character-grid.component.html
+++ b/src/app/pages/shared/components/character-grid/character-grid.component.html
@@ -44,9 +44,4 @@
   </div>
 </div>
 }
-
-<nu-paginator
-  [totalItems]="totalItems()!"
-  [(currentPage)]="currentPage"
-  [(pageSize)]="pageSize"
-></nu-paginator>
+<nu-paginator [totalItems]="totalItems()"></nu-paginator>
