--- a/src/app/pages/collections/components/akatsuki/akatsuki.component.html
+++ b/src/app/pages/collections/components/akatsuki/akatsuki.component.html
@@ -2,5 +2,7 @@
 <nu-character-grid
   [content]="content.akatsuki"
   [totalItems]="content.total"
+  (currentPage)="currentPage.set($event)"
+  (pageSize)="pageSize.set($event)"
 ></nu-character-grid>
 }
