--- a/src/app/pages/shared/components/character-grid/character-grid.component.html
+++ b/src/app/pages/shared/components/character-grid/character-grid.component.html
@@ -44,4 +44,8 @@
   </div>
 </div>
 }
-<nu-paginator [totalItems]="totalItems()"></nu-paginator>
+<nu-paginator
+  [totalItems]="totalItems()"
+  (pageSize)="pageSize.emit($event)"
+  (currentPage)="currentPage.emit($event)"
+></nu-paginator>
