--- a/src/app/pages/shared/components/character-grid/character-grid.component.html
+++ b/src/app/pages/shared/components/character-grid/character-grid.component.html
@@ -31,7 +31,7 @@
               (click)="navigateById(item.id)"
               label="View"
               icon="pi pi-search"
-              class="p-element p-ripple p-button-outlined p-button-secondary w-12 mr-2 p-button p-component"
+              class="p-element know-more-btn p-button-outlined p-button-secondary w-12 mr-2 p-button p-component"
             >
               <span class="p-button-label">Know More</span
               ><span class="p-ink"></span>
