--- a/src/app/pages/shared/components/character/components/details/details.component.html
+++ b/src/app/pages/shared/components/character/components/details/details.component.html
@@ -1,4 +1,7 @@
-<div class="surface-ground px-4 py-8 md:px-6 lg:px-8">
+<div class="pt-3 flex justify-content-center">
+  <h2>{{ content().name }}</h2>
+</div>
+<div class="surface-ground px-3 py-6 md:px-6 lg:px-8">
   @if (content().debut) {
   <nu-debut [content]="content().debut!"></nu-debut>
   } @if (content().family) {
