--- a/src/app/pages/shared/components/character/components/details/secton/nature-type/nature-type.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/nature-type/nature-type.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed title="Nature Type">
+<nu-feed title="Nature Type" icon="wave-pulse" color="yellow-500">
   <nu-list-items [content]="content()"></nu-list-items>
 </nu-feed>
 }
