--- a/src/app/pages/shared/components/character/components/details/secton/personal/personal.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/personal/personal.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed title="Personal Info">
+<nu-feed title="Personal Info" icon="user" color="cyan-500">
   <div>
     <nu-list-items
       title="Affiliation"
