--- a/src/app/pages/shared/components/character/components/details/secton/rank/rank.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/rank/rank.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed title="Rank">
+<nu-feed title="Rank" icon="sort" color="orange-500">
   @if (content().ninjaRank) {
   <p>Part 1: {{ content().ninjaRank?.['Part I'] }}</p>
   <p>Part 2: {{ content().ninjaRank?.['Part II'] }}</p>
