--- a/src/app/pages/shared/components/character/components/details/secton/unique-traits/unique-traits.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/unique-traits/unique-traits.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed title="Unique Traits">
+<nu-feed title="Unique Traits" icon="at" color="pink-500">
   <nu-list-items [content]="content()"></nu-list-items>
 </nu-feed>
 }
