--- a/src/app/pages/shared/components/character/components/details/secton/voice-actors/voice-actors.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/voice-actors/voice-actors.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed title="Voice Actors">
+<nu-feed title="Voice Actors" icon="microphone" color="purple-500">
   @if (content().japanese) {
   <nu-list-items
     [content]="content().japanese"
