--- a/src/app/pages/shared/components/character/components/details/secton/debut/debut.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/debut/debut.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed [title]="'Debut'">
+<nu-feed [title]="'Debut'" color="green-500">
   @if (content().manga) {
   <p>Manga: {{ content().manga }}</p>
   } @if (content().anime) {
