--- a/src/app/pages/shared/components/character/components/details/secton/jutsu/jutsu.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/jutsu/jutsu.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed [title]="'Jutsu'">
+<nu-feed title="Jutsu" icon="bolt">
   <nu-list-items [content]="content()"></nu-list-items>
 </nu-feed>
 }
