--- a/src/app/pages/shared/components/character/components/details/secton/tools/tools.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/tools/tools.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed title="Tools">
+<nu-feed title="Tools" icon="wrench" color="indigo-500">
   <nu-list-items [content]="content()"></nu-list-items>
 </nu-feed>
 }
