--- a/src/app/pages/shared/components/character/components/details/secton/family/family.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/family/family.component.html
@@ -1,5 +1,5 @@
 @if (content()) {
-<nu-feed title="Family" icon="users" color="primary">
+<nu-feed title="Family" icon="users" color="green-500">
   @if (content().father) {
   <p>Father: {{ content().father }}</p>
   } @if (content().mother) {
