--- a/src/app/pages/shared/components/nav/nav.component.html
+++ b/src/app/pages/shared/components/nav/nav.component.html
@@ -49,7 +49,9 @@
           class="p-ripple p-element cursor-pointer inline-flex align-items-center justify-content-center lg:hidden text-700 mr-3"
           ><i class="pi pi-bars text-4xl"></i><span class="p-ink"></span
         ></a>
-        <div class="logo">Shurikan</div>
+        <div routerLink="/" class="logo cursor-pointer hover:text-primary">
+          Shurikan
+        </div>
       </div>
     </div>
     <div class="flex flex-column flex-auto content-section">
