--- a/src/app/pages/collections/components/kara/kara.component.html
+++ b/src/app/pages/collections/components/kara/kara.component.html
@@ -5,4 +5,15 @@
   (currentPage)="currentPage.set($event)"
   (pageSize)="pageSize.set($event)"
 ></nu-character-grid>
+
+<div class="card mb-5 flex justify-content-center">
+  <p-paginator
+    class="shadow-2"
+    (onPageChange)="onPageChange($event)"
+    [first]="first"
+    [rows]="rows"
+    [totalRecords]="content.total"
+    [rowsPerPageOptions]="[25, 50, 100]"
+  />
+</div>
 }
