--- a/src/app/pages/collections/components/teams/teams.component.html
+++ b/src/app/pages/collections/components/teams/teams.component.html
@@ -1,7 +1,18 @@
-@if (content$ | async; as content) {
+@if (content$() | async; as content) {
   <nu-group-grid
     [content]="content.teams"
     [groupType]="groupType"
   ></nu-group-grid>
+  
+<div class="card mb-5 flex justify-content-center">
+  <p-paginator
+    class="shadow-2"
+    (onPageChange)="onPageChange($event)"
+    [first]="first"
+    [rows]="rows"
+    [totalRecords]="content.total"
+    [rowsPerPageOptions]="[25, 50, 100]"
+  />
+</div>
   }
   
