--- a/src/app/pages/shared/components/character/components/details/secton/personal/personal.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/personal/personal.component.html
@@ -66,7 +66,7 @@
   </div>
   <div>
     sex
-    {{ content().sex ? content().sex : "Undefined" }}
+    {{ content().sex ? content().sex : "Unknown" }}
   </div>
   <div>
     species
