--- a/src/app/pages/shared/components/character/components/photo/photo.component.scss
+++ b/src/app/pages/shared/components/character/components/photo/photo.component.scss
@@ -1,3 +1,11 @@
 img {
-  height: 40vh;
+  width: 380px;
+
+  @media (max-width: 400px) {
+    width: 300px;
+  }
+
+  @media (max-width: 310px) {
+    width: 280px;
+  }
 }
