--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="hero p-4 flex justify-content-around align-items-center">
+  <img src="naru.png" alt="" />
+  <p>
+    Naruto is the story of a boy named Naruto Uzumaki, a young ninja who seeks
+    recognition from his peers and dreams of becoming the Hokage, the leader of
+    his village
+  </p>
+</div>
