--- a/src/app/pages/shared/components/character/components/details/secton/rank/rank.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/rank/rank.component.html
@@ -1,12 +1,7 @@
 @if (content()) {
 <nu-feed title="Rank" icon="sort" color="orange-500">
-  @if (content().ninjaRank) {
-  <p>Part 1: {{ content().ninjaRank?.['Part I'] }}</p>
-  <p>Part 2: {{ content().ninjaRank?.['Part II'] }}</p>
-  <p>Blank Period {{ content().ninjaRank?.['Blank Period'] }}</p>
-  <p>Gaiden: {{ content().ninjaRank?.Gaiden }}</p>
-  <p>Boruto Manga: {{ content().ninjaRank?.['Boruto Manga'] }}</p>
-  } @if (content().ninjaRegistration) {
+  <nu-key-value [content]="content().ninjaRank!"></nu-key-value>
+  @if (content().ninjaRank) { } @if (content().ninjaRegistration) {
   <p>Ninja Registration: {{ content().ninjaRegistration }}</p>
   }
 </nu-feed>
