--- a/src/app/pages/shared/components/character/components/details/secton/debut/debut.component.html
+++ b/src/app/pages/shared/components/character/components/details/secton/debut/debut.component.html
@@ -1,19 +1,5 @@
 @if (content()) {
 <nu-feed [title]="'Debut'" color="primary-500">
-  @if (content().manga) {
-  <p>Manga: {{ content().manga }}</p>
-  } @if (content().anime) {
-  <p>Anime: {{ content().anime }}</p>
-  } @if (content().novel) {
-  <p>Novel:{{ content().novel }}</p>
-  } @if (content().appearsIn) {
-  <p>appearsIn: {{ content().appearsIn }}</p>
-  } @if (content().game) {
-  <p>Game: {{ content().game }}</p>
-  } @if (content().movie) {
-  <p>Movie: {{ content().manga }}</p>
-  } @if (content().ova) {
-  <p>OVA: {{ content().ova }}</p>
-  }
+  <nu-key-value [content]="content()"></nu-key-value>
 </nu-feed>
 }
