--- a/src/app/pages/shared/components/nav/nav.component.html
+++ b/src/app/pages/shared/components/nav/nav.component.html
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-    <div class="flex flex-column flex-auto content-section">
+    <div class="flex flex-column flex-auto content-section" id="style-7">
       <ng-content class="overflow-y-scroll"></ng-content>
     </div>
   </div>
