add header mocks to all pages

--- a/src/app/pages/collections/components/characters/characters.component.html
+++ b/src/app/pages/collections/components/characters/characters.component.html
@@ -2,6 +2,7 @@
 <nu-character-grid
   [content]="content.characters"
   [totalItems]="content.total"
+  [header]="header()"
   (currentPage)="currentPage.set($event)"
   (pageSize)="pageSize.set($event)"
 ></nu-character-grid>
