--- a/src/app/pages/collections/components/villages/villages.component.html
+++ b/src/app/pages/collections/components/villages/villages.component.html
@@ -2,6 +2,7 @@
 <nu-group-grid
   [content]="content.villages"
   [groupType]="groupType"
+  [header]="header()"
 ></nu-group-grid>
 
 <div class="card mb-5 flex justify-content-center">
