--- a/src/app/pages/collections/components/teams/teams.component.html
+++ b/src/app/pages/collections/components/teams/teams.component.html
@@ -1,9 +1,10 @@
 @if (content$() | async; as content) {
-  <nu-group-grid
-    [content]="content.teams"
-    [groupType]="groupType"
-  ></nu-group-grid>
-  
+<nu-group-grid
+  [content]="content.teams"
+  [groupType]="groupType"
+  [header]="header()"
+></nu-group-grid>
+
 <div class="card mb-5 flex justify-content-center">
   <p-paginator
     class="shadow-2"
@@ -14,5 +15,4 @@
     [rowsPerPageOptions]="[25, 50, 100]"
   />
 </div>
-  }
-  
+}
