--- a/src/app/pages/shared/components/nav/nav.component.scss
+++ b/src/app/pages/shared/components/nav/nav.component.scss
@@ -31,7 +31,8 @@ li {
 .logo {
   padding-left: 30vw;
   font-size: 26px;
-  font-weight: 500;
+  font-weight: 600;
+  color: var(--primary-color);
 
   @media (max-width: 767px) {
     padding-left: 20vw;
@@ -53,24 +54,15 @@ li {
 }
 
 #style-7::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(51, 51, 51, 0.3);
   background-color: #f5f5f5;
-  border-radius: 10px;
 }
 
 #style-7::-webkit-scrollbar {
-  width: 10px;
+  width: 7px;
   background-color: #f5f5f5;
 }
 
 #style-7::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-    color-stop(0.44, rgb(122, 153, 217)),
-    color-stop(0.72, rgb(73, 125, 189)),
-    color-stop(0.86, rgb(28, 58, 148))
-  );
+  background-color: var(--primary-color);
 }
