make slight changes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,11 @@
 <div class="hero p-4 flex justify-content-around align-items-center">
   <img src="naru.png" alt="naruto" />
-  <p>
-    Naruto is the story of a boy named Naruto Uzumaki, a young ninja who seeks
-    recognition from his peers and dreams of becoming the Hokage, the leader of
-    his village.
-  </p>
+  <div>
+    <p>
+      Naruto is the story of a boy named Naruto Uzumaki, a young ninja who seeks
+      recognition from his peers and dreams of becoming the Hokage, the leader
+      of his village.
+    </p>
+    <p-button label="Go To Characters" [raised]="true" routerLink="/characters" />
+  </div>
 </div>
