--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -15,6 +15,7 @@
     max-width: 500px;
     font-size: 1.5rem;
     font-weight: 500;
+    padding-bottom: 15px;
 
     @media (max-width: 500px) {
       font-size: 1rem;
